# cgap-portal

./: .dockerignore  .eslintrc.json  .flake8  .gitignore  .prettierignore  .prettierrc.json  .travis.yml  CHANGELOG.rst  CHANGELOG.rst.SAVE  CONTRIBUTING.rst  CONTRIBUTORS.json  Dockerfile  LICENSE.txt  Makefile  Makefile-bak  Makefile-test  README.rst  UNFINISHED_MWFR_DUMMY_INSERT  babel.config.js  base.ini  buildout.cfg  buildout.cfg.DISABLED  buildspec.yml  conf.py  conftest.py  development.ini  development.ini.template  docker-compose.yml  docker-compose.yml.template  fixup-poetry-dot-lock.sh  generate_items_config.yml  gulpfile.js  package-lock.json  package.json  pip-list-after-poetry-update  pip-list-before-poetry-update  poetry-list-after-poetry-update  poetry.lock----  poetry.lock-20230215-  poetry.lock-C4-990-refactor-ingestion-listener-mac-poetry-update  (+20 more)
.ebextensions/: 05_set_wsgi.config  11_logs.config  13_run_npm.config  20_packages.config
.ebextensions.DISABLED/: 05_set_wsgi.config  20_packages.config
.github/workflows/: cypress-tests-mgb.yml  cypress-tests-production.yml  main-3.6.yml  main.yml  static-checks.yml  static-checks.yml.SAVE
.github/workflows-disabled/: main-multi.yml.DISABLED
.tmp/: ingestion_message_handler_vcf.py
.tmp2/: ingestion_listener_base.py  ingestion_message_handler_decorator.py  ingestion_message_handler_novcf.py
deploy/: deploy_beanstalk.py  generate_buildout_cfg.py  generate_production_ini.py  travis_after_all.py
deploy/docker/: docker-compose.yml
deploy/docker/elasticsearch/: Dockerfile
deploy/docker/local/: Dockerfile  Makefile  development.ini  docker_development.ini  docker_development.ini.template  entrypoint.sh  install_nginx.sh  nginx.conf
deploy/docker/postgres/: Dockerfile
deploy/docker/production/: Dockerfile  Dockerfile_indexer  Makefile  assume_identity.py  cgap_any_alpha.ini  docker-compose.yml  entrypoint.sh  entrypoint_deployment.sh  entrypoint_indexer.sh  entrypoint_ingester.sh  entrypoint_portal.sh  install_nginx.sh  mastertest.ini  nginx.conf  supervisord.conf
deploy/docker/wsgi/: Dockerfile  Makefile  cgap.conf  development.ini  entrypoint.sh  nginx.conf
deploy/ini_files/: any.ini  any.ini.DISABLED  cgap.ini  cgap.ini.DISABLED  cgapdev.ini  cgapdev.ini.DISABLED  cgaptest.ini  cgaptest.ini.DISABLED  cgapwolf.ini
deploy/post_deploy_testing/: cypress.config.js  cypress.json
deploy/tests/: test_deploy_beanstalk.py  test_generate_any_production_ini.py  test_generate_production_ini.py
docs/public/help/: access_keys.md  accessioning_1.md  accessioning_2.html  accessioning_2.jsx  accessioning_2.md  accessioning_3.html  accessioning_3.jsx  accessioning_3.md  accessioning_4.md  annotation_browser.md  developer_facing_docs.md  family_history_1.html  family_history_1.md  family_history_2.html  family_history_2.jsx  family_history_2.md  family_history_3.html  family_history_3.jsx  family_history_3.md  family_history_4.md  file_uploads.html  file_uploads.jsx  file_uploads.md  file_uploads_1.md  file_uploads_2.md  genelist.html  genelist.jsx  genelist.md  logging_in.md  ontologies_in_cgap.md  tutorials_1.html  tutorials_2.html  video_tutorials.md
docs/source/: account_creation.rst  auth.rst  beanstalk-deployment.rst  biosample_metadata.rst  conf.py  database.rst  dataflow_overview.rst  docker-local.rst  docker-production.rst  excel_submission.rst  getting_started.rst  higlass-visualization.rst  index.rst  infra_landing.rst  infrastructure_overview.rst  ingestion.rst  inserts.rst  installation.rst  introduction.rst  invalidation.rst  local_deployment_troubleshooting.rst  local_installation.rst  object-lifecycle.rst  overview.rst  pheno_disorder_updating.rst  rest_api_submission.rst  rev-links.rst  schema_info.rst  search.rst  search_info.rst  static-pages.rst  unittest.rst  updating_items_from_ontologies.rst  variant.rst  web_submission.rst
examples/: s3cp.py
parts/production-ingestion-listener/: wsgi
scripts/: assure-awscli  build-docker-test  debug-docker-local  ecr-test-login  fixup-poetry-dot-lock.sh  kibana-start  kibana-stop  order_schema_columns_and_facets.py  preload  psql-start
src/encoded/: __init__.py  acl.py  appdefs.py  associate_uploads.py  authentication.py  authorization.py  batch_download.py  batch_download_utils.py  common.py  constants.py  custom_embed.py  dev_servers.py  drr_batch_download.py  drr_item_models.py  i.py  ingestion_engines.py  ingestion_listener.py  ingestion_listener_base.py  ingestion_listener_defs.py  ingestion_message.py  ingestion_message_handler_decorator.py  ingestion_message_handler_decorator.py-  ingestion_message_handler_default.py  ingestion_message_handler_novcf.py  ingestion_message_handler_vcf.py  inheritance_mode.py  item_models.py  loadxl.py  loadxl.py-obsolete  local_roles.py  memlimit.py  nginx-dev.conf  pipeline_view.py  project_defs.py  project_env.py  project_start.py  quick_embed.py  renderers.py  renderers.py-obsolete  root.py  (+16 more)
src/encoded/annotations/: GAPFIAI7IZ9Y_v0.5.2.vcf  GAPFIAI7IZ9Y_v0.5.3.vcf  GAPFIBVPFEP5_v0.5.4.reformat.altcounts.vcf.subset  GAPFIDTAWSY3_v0.0.2.vcf.subset  GAPFII76KW2T_v0.5.5.reformat.altcounts.vcf.subset  GAPFIQHD6QAN_v0.0.4.vcf.subset  GAPFIQHD6QAN_v0.0.6.sv.vcf.subset  GAPFIRMV7N2U_subset_v0.5.1.vcf  GAPFIV4NLMMT_v0.0.3.vcf.subset  GAPFIXRDPDK5_v0.0.5.vcf.subset  GAPFIXRDPDK5_v0.0.6.cnv.vcf.subset  README.rst  gene_table_v0.4.5.csv  gene_table_v0.4.6.csv  v0.0.2_structural_variant_table.csv  v0.0.3_structural_variant_table.csv  v0.0.4_structural_variant_table.csv  v0.0.5_structural_variant_table.csv  v0.0.6_structural_variant_table.csv  v0.5.3_variant_table.csv  v0.5.4_variant_table.csv  v0.5.5_variant_table.csv  v0.5.6_variant_table.csv  variant_consequence.json  variant_table_v0.4.6.csv  variant_table_v0.4.7.csv  variant_table_v0.4.8.csv  variant_table_v0.5.0.csv  variant_table_v0.5.1.csv  variant_table_v0.5.2.csv
src/encoded/commands/: add_altcounts_by_gene.py  add_date_created.py  annotation_field.json  build_annotation_schema.py  build_variant_schema.py  ecr_scripts.py  (+57 more)
tmp/ubuntu-20.04/: Dockerfile-bak
(+859 files in other folders)
